--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-    <iframe src="./index.html" height="500px" width="500px"></iframe>
+    <iframe src="./dummy.html" height="500px" width="500px"></iframe>
     <a href="./index2.html">Click here to see video</a>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
